# rust_axum_fun

./: .README  .sample_env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
axum/: Cargo.toml
axum/src/: main.rs
axum/src/common/: database.rs  database_helpers.rs  database_impls.rs  errors.rs  item_records.json  mod.rs
axum/src/common/models/: mod.rs  pagination_schema.rs  restaurant_schema.rs  sort_schema.rs
axum/src/handlers/: mod.rs  table.rs
axum/src/handlers/item_handler/: item.rs  item_db.rs  item_handler.rs  mod.rs  unit_tests.rs
axum/src/handlers/order_handler/: mod.rs  order.rs  order_db.rs
axum/src/handlers/table_handler/: mod.rs  table.rs  table_db.rs  unit_tests.rs
axum/src/routes/: routes.rs
axum/src/tests/: integration_tests.rs
restaurant_app/: Cargo.toml
restaurant_app/src/: main.rs
restaurant_app/src/common/: database.rs  database_helpers.rs  item_records.json
restaurant_app/src/common/models/: mod.rs
restaurant_app/src/handlers/: mod.rs
restaurant_app/src/handlers/item_handler/: item.rs
restaurant_app/src/handlers/order_handler/: order_db.rs  unit_tests.rs
restaurant_app/src/handlers/table_handler/: table.rs  table_db.rs  unit_tests.rs
restaurant_app/src/tests/: integration_tests.rs
