[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }

async-trait = "0.1.58"
futures = "0.3.24"

serde = "1.0.193"
serde_json = "1.0.108"
serde_repr = "0.1.12"

axum = "0.7.2"

chrono = {version="0.4.31", features = ["serde"]}

percent-encoding = "2.2.0"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime", "aws-auth", "bson-chrono-0_4", "bson-serde_with"]
